# chat-with-fred

./: .env.sample  .gitignore  README.md  local_test.py  main.py
backend/: analysis.py  macro_specialist.py  managers.py  pyproject.toml  schemas.py  vector_db.py
backend/config/: config.py  env.py  utils.py
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  chat.tsx  types.ts
