[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
openai = "1.44.0"
python-dotenv = "^1.0.1"
streamlit = "^1.38.0"
markdown2 = "^2.5.0"
weasyprint = "^62.3"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
pyfakefs = "^5.6.0"
langchain = "^0.2.16"
instructor = "^1.4.1"
tenacity = "^8.5.0"
tiktoken = "^0.7.0"
loguru = "^0.7.2"
fredapi = "^0.5.2"
pinecone = "^5.4.2"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
